--- a/style.css
+++ b/style.css
@@ -40,6 +40,18 @@ body {
   width: 11rem;
 }
 
+.img-container::after {
+  content: '';
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  height: 2rem;
+  width: 2rem;
+  transform: translate(-50%, 50%);
+}
+
 .img-container img {
   border-radius: 50%;
   object-fit: cover;
@@ -92,4 +104,44 @@ body {
 
 .action-btn:focus {
   outline: 0;
+}
+
+.music-info {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 15px 15px 0 0;
+  position: absolute;
+  top: 0;
+  left: 2rem;
+  width: calc(100% - 4rem);
+  padding: 1rem 1rem 1rem 15rem;
+  opacity: 0;
+  transform: translateY(0%);
+  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+  z-index: 0;
+}
+
+.music-container.play .music-info {
+  opacity: 1;
+  transform: translateY(-100%);
+}
+
+.music-info h4 {
+  margin: 0;
+}
+
+.progress-container {
+  background-color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 1rem 0;
+  height: 0.4rem;
+  width: 100%;
+}
+
+.progress {
+  background-color: #fe8daa;
+  border-radius: 5px;
+  height: 100%;
+  width: 0%;
+  transition: width 0.1s linear;
 }
